talos/garage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage
spec:
  selector:
    app.kubernetes.io/name: garage
  ports:
    - name: s3
      port: 3900
      targetPort: s3
